--- a/assets/images/favicon/manifest.json
+++ b/assets/images/favicon/manifest.json
@@ -1,34 +1,33 @@
 {
     "name": "App",
-    "icons": [
-        {
-            "src": "\/favicon.png",
+    "icons": [{
+            "src": "/favicon.png",
             "sizes": "32x32",
-            "type": "image\/png",
+            "type": "image/png",
             "density": "0.55"
         },
         {
-            "src": "\/favicon16.png",
+            "src": "/favicon16.png",
             "sizes": "16x16",
-            "type": "image\/png",
+            "type": "image/png",
             "density": "1"
         },
         {
-            "src": "\/favicon32.png",
+            "src": "/favicon32.png",
             "sizes": "32x32",
-            "type": "image\/png",
+            "type": "image/png",
             "density": "2"
         },
         {
-            "src": "\/favicon64.png",
+            "src": "/favicon64.png",
             "sizes": "64x64",
-            "type": "image\/png",
+            "type": "image/png",
             "density": "3.0"
         },
         {
-            "src": "\/favicon128.png",
+            "src": "/favicon128.png",
             "sizes": "128x128",
-            "type": "image\/png",
+            "type": "image/png",
             "density": "4.0"
         }
     ]
